# ppa

./: .gitignore  README.md  base.yaml
docs/: LEGACY-debian-build.md  development-container.md
lint/: .pre-commit-config.yaml  cmake-format.json
rosdistro/: base.yaml
rosful/: .env  CMakeLists.txt  Dockerfile  README.md  compose.dev.yml  package.xml
rosful/src/: node.cpp
rosless/: .env  CMakeLists.txt  Dockerfile  README.md  compose.dev.yml
rosless/say-hello/: CMakeLists.txt
rosless/say-hello/cmake/: say-helloConfig.cmake
rosless/say-hello/debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  say-hello.cron.d.ex  say-hello.doc-base.EX  shlibs.local.ex  watch.ex
rosless/say-hello/include/say-hello/: speaker.hpp
rosless/say-hello/src/: speaker.cpp
rosless/say-hello/test/: CMakeLists.txt  say_hello_tests.cpp
ubuntu/: InRelease  KEY.gpg  Packages  Release  Release.gpg  filter-test.deb  griswaldbrooks.list  say-hello-dev_1.0-1_amd64.deb  say-hello-sources.list  say-hello.deb  say-hello_1.0-1.debian.tar.xz  say-hello_1.0-1.dsc  say-hello_1.0-1_amd64.buildinfo  say-hello_1.0-1_amd64.changes
