<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosful</name>
  <version>0.0.0</version>
  <description>ros node that consumes rosless library</description>
  <maintainer email="griswald.brooks@gmail.com">Griswald Brooks</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>say-hello-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
